feat: add progress storage module

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -9,6 +9,7 @@
   "sfx": "SFX",
   "editor": "Editor",
   "hint": "Hint",
-  "theme": "Theme"
-  "retry": "Retry"
+  "theme": "Theme",
+  "dailyComplete": "Daily Complete",
+  "daily": "Daily"
 }
